[gd_scene load_steps=2 format=3 uid="uid://cc572s3y8nxpm"]

[ext_resource type="Script" uid="uid://cji1nvsflarsx" path="res://src/ui/pause_layer.gd" id="1_5mdu6"]

[node name="PauseLayer" type="CanvasLayer"]
script = ExtResource("1_5mdu6")

[node name="PauseMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="PauseMenu/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
text = "Paused"

[node name="ResumeButton" type="Button" parent="PauseMenu/MarginContainer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[connection signal="pressed" from="PauseMenu/MarginContainer/Control/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
